# $Id$

Griffith ChangeLog
------------------
(c) 2005-2007  Vasco Nunes, Piotr Ożarowski

2007-04-15  Piotr Ożarowski
	* IMDB movie plugin updated to version 1.2

2007-04-11  Piotr Ożarowski
	* Fixed medium_id and vcodec_id column type in movies table

2007-04-01  Piotr Ożarowski
	* Added Dutch translation (thanks to Marcel Dijkstra)

2007-03-29  Piotr Ożarowski
	* IMDB movie plugin updated
	* IMDb-de movie plugin added (thanks to Michael Jahn)

2007-03-20  Piotr Ożarowski
	* FilmDb and Zelluloid movie plugins added (thanks to Michael Jahn)

2007-03-11  Piotr Ożarowski
	* Filmweb movie plugin updated (no more hangs if no movie info found - closes #10601)
	* Version changed to 0.9.2+svn
	* New configuration file format (human readable) - please delete old one manually

---- 0.9.2 ---

2007-02-20  Piotr Ożarowski
	* IMDB movie plugin updated
	* New seen/unseen icons (thanks to dragonskulle)
	* About window updated

2007-02-19  Piotr Ożarowski
	* CSFD movie plugin updated (still needs work)
	* DVDEmpire movie plugin added (thanks to Michael Jahn)

2007-02-14  Piotr Ożarowski
	* KinoDe and FilmeVonAZ movie plugins updated (thanks to Michael Jahn)

---- 0.9.1 ---

2007-02-13  Piotr Ożarowski
	* KinoDe movie plugin updated (thanks to Michael Jahn)

2007-02-12  Piotr Ożarowski
	* Fix broken databases automatically (return date will be set to 2007-01-01) - redo the upgrade process if you don't like it

2007-02-11  Piotr Ożarowski
	* Fix one more bad case in upgrade function
	* Fix setting loan status in upgrade function

2007-02-03  Jessica K. Parth
	* OFDb movie plugin updated (website changed)

2007-01-27  Piotr Ożarowski
	* English translation fixes (thanks Frijolie)

---- 0.9 ---

2007-01-26  Piotr Ożarowski
	* WP and Filmweb movie plugins updated

2007-01-26  Jessica K. Parth
	* Fix AniDB Problems in Windows ( file-open problem in movie.py )

2007-01-25  Piotr Ożarowski
	* Fix more bad cases in upgrade from old DB function

2007-01-24  Piotr Ożarowski