@@ -5,7 +5,8 @@ Griffith ChangeLog
 (c) 2005-2007  Vasco Nunes, Piotr Ożarowski
 
 2007-04-15  Piotr Ożarowski
-	* IMDB movie plugin updated to version 1.2
+	* IMDB movie plugin updated to version 1.3 (director, rating)
+	* Fetch from Amazon function fixed ("No image available" image issue)
 
 2007-04-11  Piotr Ożarowski
 	* Fixed medium_id and vcodec_id column type in movies table
